--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@sanity/client": "^3.2.0",
+    "@sanity/core": "^2.30.2",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.25.0",
     "canvas-confetti": "^1.5.1",
@@ -20,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "sanity": "^3.2.4",
     "stripe": "^8.209.0"
   },
   "devDependencies": {
